gcc/testsuite/gcc.target/riscv/pr102957.c
@@ -1,0 +1,5 @@
+/* { dg-do compile } */
+/* { dg-options "-O -march=rv64gzb -mabi=lp64" } */
+int foo()
+{
+}
